src/objects/Client_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Case_Related_Journey__c</fullName>
        <label>Case Related Journey</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Comments</relationshipLabel>
        <relationshipName>Client_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distance_Travelled_Kilometers__c</fullName>
        <label>Distance Travelled (Kilometers)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_by__c</fullName>
        <label>Legacy Created by</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Creation_Date__c</fullName>
        <label>Legacy Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <label>Mentor</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barry Owens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brid Wallace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denise Coulahan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jerry Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patti McCann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valerie Bonnie</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Calls__c</fullName>
        <label>Phone Calls</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Client__c</fullName>
        <label>Time Spent (Hours - Client)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Hours_Total__c</fullName>
        <label>Time Spent (Hours - Total)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <label>Type of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Agency Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client Comment</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>